--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Murali Portfolio | This Is My First Web Development Project.">
+  <meta name="description" content="Rishu | This Is My First Web Development Project.">
   <meta itemprop="name" content="Murali Portfolio">
-  <meta itemprop="description" content="Murali Portfolio | This Is My First Web Development Project">
+  <meta itemprop="description" content="Rishu | This Is My First Web Development Project">
   <meta itemprop="image" content="https://telegra.ph/file/b5dc43fe371cb75dbed54.jpg">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -35,16 +35,16 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!-- Page Title and Favicon -->
-  <title>Murali Portfolio</title>
+  <title>Rishu</title>
   <link rel="icon" href="Img/Logoo.png" type="image/x-icon">
 
   <!-- Open Graph Meta Tags -->
-  <meta content="Murali Portfolio" property="og:site_name">
+  <meta content="Rishu" property="og:site_name">
   <meta property="og:type" content="website">
-  <meta content="https://MuraliBotz.github.io/" property="og:url">
-  <meta content="Murali" property="og:title">
+  <meta content="https://t.me/rishu1286" property="og:url">
+  <meta content="Rishu" property="og:title">
   <meta content="https://telegra.ph/file/b5dc43fe371cb75dbed54.jpg" property="og:image">
-  <meta content="Murali Portfolio | This Is My First Web Development Project." property="og:description">
+  <meta content="Rishu | This Is My First Web Development Project." property="og:description">
 </head>
 <body>
 		<motion-particles></motion-particles>
@@ -304,12 +304,12 @@
 </div>
 
 <div id="sidebar">
-    <a href="https://t.me/Muralibotz" id="channel">CHANNEL</a>
-    <a href="https://t.me/itzNotCoderz" id="group">GROUP</a>
-    <a href="https://MuraliBotz.github.io/Chiku" id="source-code">CHAT BOT</a>
-    <a href="https://MuraliBotz.github.io/Neko" id="developer">NEKO GENERATOR</a>
-    <a href="https://MuraliBotz.github.io/Music-Player" id="Music">Music Player</a>
-    <a href="https://github.com/MuraliBotz?tab=repositories" id="allsource">SOURCE CODE OF ALL</a>
+    <a href="https://t.me/ur_rishu_143" id="channel">CHANNEL</a>
+    <a href="https://t.me/ur_support07" id="group">GROUP</a>
+    <a href="https://t.me/vip_robotz" id="source-code">OFFICE</a>
+    <a href="https://t.me/RishuNetwork" id="developer">NETWORK</a>
+    <a href="https://t.me/RishuTeam" id="Music">TEAM</a>
+    <a href="https://t.me/rishu1286" id="allsource">YOUR RISHU</a>
 </div>
 
 <div id="overlay"></div>
@@ -320,19 +320,19 @@
       <img id="random-image" src="">
     </div>
     <div class="welcome-text">
-      Welcome To My Profile
+      Welcome To Website 
     </div>
     <div class="MyName">My Name Is <span id="element"></span></div>
     <div class="MyName"><span id="elementTwo"></span></div>
     <div class="about-text">About Me</div>
     <div id="greeting-text"></div>
     <div class="about-me-content">
-      Welcome To My First Portfolio <br>
-      My Name Is Murali, Im From Karnataka <br>
+      Welcome To My First Website <br>
+      My Name Is Rishu, Im From Uttar Pradesh<br>
       My Age Is 16 And Im Not A Pro Coder <br>
       I Just Do This Coding Only For My Timepass<br>
-      I Have A Channel @MuraliBotz On Telegram I <br>
-      Upload My All Public Repository And Codes There <br>
+      I Have A Channel @Ur_rishu_143 On Telegram I <br>
+      Upload My All Public Bot And Codes There <br>
       U Can Join...<br>
       If You Still Have Any Questions Dm Me On Telegram !
     </div>
@@ -378,17 +378,17 @@
       </div>
       <div class="hero-description">
         <p>A Artificial Intelligence Chat Bot Made In Javascript Language <br>
-          Made By @MuraliBotz
+          Made By @Ur_rishu_143
         </p>
       </div>
       <div class="hero-date">
         <p>CHIKU CHAT BOT</p>
       </div>
       <div class="hero-btn">
-        <a href="https://muralibotz.github.io/Chiku">Chat With Chiku</a>
+        <a href="https://rishabhopi.github.io/Chiku/">Chat With Chiku</a>
       </div>
       <div class="repo-btn">
-        <a href="https://github.com/MuraliBotz/Chiku">Bot Repository</a>
+        <a href="https://t.me/rishu1286">Delovper</a>
       </div>
     </div>
     <div class="first hero">
@@ -399,17 +399,17 @@
       </div>
       <div class="hero-description">
         <p>A Random Neko Image Generator Made In Javascript Language <br>
-          Made By @MuraliBotz
+          Made By @Ur_rishu_143
         </p>
       </div>
       <div class="hero-date">
         <p>Neko Image Generator</p>
       </div>
       <div class="hero-btn">
-        <a href="https://muralibotz.github.io/Neko">Visit Web</a>
+        <a href="https://t.me/ur_rishu_143">Visit Web</a>
       </div>
       <div class="repo-btn">
-        <a href="https://github.com/MuraliBotz/Neko">Source Code</a>
+        <a href="https://rishu1286">Devloper</a>
       </div>
     </div>
    <div class="first hero">
@@ -420,17 +420,17 @@
       </div>
       <div class="hero-description">
         <p>My Personal Music Player Website Made In Javascript 💫 <br>
-          Made By @MuraliBotz
+          Made By @Ur_rishu_143
         </p>
       </div>
       <div class="hero-date">
         <p>Music Player</p>
       </div>
       <div class="hero-btn">
-        <a href="https://muralibotz.github.io/Music-Player">Visit Web</a>
+        <a href="https://rishabhopi.github.io/Music-Player/">Visit Web</a>
       </div>
       <div class="repo-btn">
-        <a href="https://github.com/MuraliBotz/Music-Player">Source Code</a>
+        <a href="https://t.me/rishu1286">Devloper</a>
       </div>
    </div>
     <div class="github-stats-text">
@@ -439,26 +439,26 @@
     <div class="visitors-text">
       Total Visitors
     </div>
-    <a href="https://github.com/MURALIBOTZ" target="_blank">
-      <img class="visitors" src="https://profile-counter.glitch.me/MURALIBOTZ/count.svg" alt="" />
+    <a href="https://github.com/Rishabhopi" target="_blank">
+      <img class="visitors" src="https://profile-counter.glitch.me/rishabhopi/count.svg" alt="" />
     </a>
-    <a href="https://github.com/MURALIBOTZ" target="_blank">
-      <img class="github-stats" src="https://github-readme-stats.vercel.app/api?username=MuraliBotz&show_icons=true&theme=vision-friendly-dark" alt="GitHub Stats" />
+    <a href="https://github.com/rishabhopi" target="_blank">
+      <img class="github-stats" src="https://github-readme-stats.vercel.app/api?username=rishabhopi&show_icons=true&theme=vision-friendly-dark" alt="GitHub Stats" />
     </a>
-    <a href="https://github.com/MURALIBOTZ" target="_blank">
-      <img class="Zgithub-stats" src="https://github-readme-streak-stats.herokuapp.com/?user=MURALIBOTZ&theme=chartreuse-dark&hide_border=True&bg_color=000000" alt="GitHub Stats" />
+    <a href="https://github.com/rishabhopi" target="_blank">
+      <img class="Zgithub-stats" src="https://github-readme-streak-stats.herokuapp.com/?user=rishabhopi&theme=chartreuse-dark&hide_border=True&bg_color=000000" alt="GitHub Stats" />
     </a>
-    <a href="https://github.com/MURALIBOTZ" target="_blank">
-      <img class="most-lang" src="https://github-readme-stats.vercel.app/api/top-langs/?username=MuraliBotz&size_weight=0.0005&count_weight=0.5&layout=compact&theme=vision-friendly-dark" alt="GitHub Stats" />
+    <a href="https://github.com/rishabhopi" target="_blank">
+      <img class="most-lang" src="https://github-readme-stats.vercel.app/api/top-langs/?username=rishabhopi&size_weight=0.0005&count_weight=0.5&layout=compact&theme=vision-friendly-dark" alt="GitHub Stats" />
     </a>
     <div class="contact-me-text">
       Contact Me 
     </div>
     <div class="social-media">
-      <a href="https://t.me/ItzNotCoder" style="--i:6"><i class='bx bxl-telegram'></i></a>
-      <a href="https://Instagram.com/MuraliBotz" style="--i:7"><i class='bx bxl-instagram'></i></a>
-      <a href="mailto:muralimurali3211260@gmail.com" style="--i:8"><i class='bx bxl-gmail'></i></a>
-      <a href="https://github.com/MuraliBotz" style="--i:8"><i class='bx bxl-github'></i></a>
+      <a href="https://t.me/rishu1286" style="--i:6"><i class='bx bxl-telegram'></i></a>
+      <a href="https://Instagram.com/Rishabhopi" style="--i:7"><i class='bx bxl-instagram'></i></a>
+      <a href="mail.io: itsrishuu07@gmail.com" style="--i:8"><i class='bx bxl-gmail'></i></a>
+      <a href="https://github.com/rishabhopi" style="--i:8"><i class='bx bxl-github'></i></a>
     </div>
   </div>
   
