--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
       My Projects
     </div>
     <div class="first hero">
-      <img class="hero-profile-img" src="https://MuraliBotz.github.io/Img/Chiku.png" alt="">
+      <img class="hero-profile-img" src="https://github.com/Rishabhopi/Rishu.github.io" alt="">
       <div class="hero-description-bk"></div>
       <div class="hero-logo">
         <img src="https://MuraliBotz.github.io/Img/chikulogo.png" alt="">
