--- a/index.html
+++ b/index.html
@@ -371,10 +371,10 @@
       My Projects
     </div>
     <div class="first hero">
-      <img class="hero-profile-img" src="https://github.com/Rishabhopi/Rishu.github.io" alt="">
+      <img class="hero-profile-img" src="https://github.com/Rishabhopi/Rishu.github.io/Img/chiku.png" alt="">
       <div class="hero-description-bk"></div>
       <div class="hero-logo">
-        <img src="https://MuraliBotz.github.io/Img/chikulogo.png" alt="">
+        <img src="https://github.com/Rishabhopi/Rishu.github.io/Img/chikulogo.png" alt="">
       </div>
       <div class="hero-description">
         <p>A Artificial Intelligence Chat Bot Made In Javascript Language <br>
