--- a/index.html
+++ b/index.html
@@ -385,14 +385,14 @@
         <p>CHIKU CHAT BOT</p>
       </div>
       <div class="hero-btn">
-        <a href="https://rishabhopi.github.io/Chiku/">Chat With Chiku</a>
+        <a href="https://github.com/Rishabhopi/Rishu.github.io/img/Chiku.png">Chat With Chiku</a>
       </div>
       <div class="repo-btn">
         <a href="https://t.me/rishu1286">Delovper</a>
       </div>
     </div>
     <div class="first hero">
-      <img class="hero-profile-img" src="https://MuraliBotz.github.io/Img/neko.png" alt="">
+      <img class="hero-profile-img" src="https://github.com/Rishabhopi/Rishu.github.io/blob/db791483c412ae6e530f366cb54c842ef4f94a9e/Img/neko.png" alt="">
       <div class="hero-description-bk"></div>
       <div class="hero-logo">
         <img src="https://MuraliBotz.github.io/Img/nekologo.png" alt="">
